// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkChip should render correctly 1`] = `
<div
  className="bpk-chip"
>
  <span
    className="bpk-chip__label"
  >
    This is a Chip!
  </span>
  <BpkCloseButton
    className="bpk-chip__close-button"
    customIcon={null}
    label="Close"
    onClick={[Function]}
  />
</div>
`;

exports[`BpkChip should render correctly with a "className" attribute 1`] = `
<div
  className="bpk-chip custom-class"
>
  <span
    className="bpk-chip__label"
  >
    This is a Chip!
  </span>
  <BpkCloseButton
    className="bpk-chip__close-button"
    customIcon={null}
    label="Close"
    onClick={[Function]}
  />
</div>
`;

exports[`BpkChip should render correctly with a "closeLabel" function attribute 1`] = `
<div
  className="bpk-chip"
>
  <span
    className="bpk-chip__label"
  >
    This is a Chip!
  </span>
  <BpkCloseButton
    className="bpk-chip__close-button"
    customIcon={null}
    label="Custom close (this is a chip!)"
    onClick={[Function]}
  />
</div>
`;

exports[`BpkChip should render correctly with a "closeLabel" string attribute 1`] = `
<div
  className="bpk-chip"
>
  <span
    className="bpk-chip__label"
  >
    This is a Chip!
  </span>
  <BpkCloseButton
    className="bpk-chip__close-button"
    customIcon={null}
    label="close it"
    onClick={[Function]}
  />
</div>
`;

exports[`BpkChip should render correctly with type="light" 1`] = `
<div
  className="bpk-chip bpk-chip--light"
>
  <span
    className="bpk-chip__label bpk-chip__label--light"
  >
    This is a Chip!
  </span>
  <BpkCloseButton
    className="bpk-chip__close-button bpk-chip__close-button--light"
    customIcon={null}
    label="Close"
    onClick={[Function]}
  />
</div>
`;

exports[`BpkChip should render correctly with type="light" and disabled 1`] = `
<div
  className="bpk-chip bpk-chip--light bpk-chip--disabled"
>
  <span
    className="bpk-chip__label bpk-chip__label--light bpk-chip__label--disabled"
  >
    This is a Chip!
  </span>
  <BpkCloseButton
    className="bpk-chip__close-button bpk-chip__close-button--light bpk-chip__close-button--disabled"
    customIcon={null}
    label="Close"
    onClick={[Function]}
  />
</div>
`;

exports[`BpkChip should render correctly with type="light" and not dismissible 1`] = `
<div
  className="bpk-chip bpk-chip--light"
>
  <span
    className="bpk-chip__label bpk-chip__label--light"
  >
    This is a Chip!
  </span>
</div>
`;

exports[`BpkChip should render correctly with type="neutral" 1`] = `
<div
  className="bpk-chip"
>
  <span
    className="bpk-chip__label"
  >
    This is a Chip!
  </span>
  <BpkCloseButton
    className="bpk-chip__close-button"
    customIcon={null}
    label="Close"
    onClick={[Function]}
  />
</div>
`;

exports[`BpkChip should render correctly with type="neutral" and disabled 1`] = `
<div
  className="bpk-chip bpk-chip--disabled"
>
  <span
    className="bpk-chip__label bpk-chip__label--disabled"
  >
    This is a Chip!
  </span>
  <BpkCloseButton
    className="bpk-chip__close-button bpk-chip__close-button--disabled"
    customIcon={null}
    label="Close"
    onClick={[Function]}
  />
</div>
`;

exports[`BpkChip should render correctly with type="neutral" and not dismissible 1`] = `
<div
  className="bpk-chip"
>
  <span
    className="bpk-chip__label"
  >
    This is a Chip!
  </span>
</div>
`;

exports[`BpkChip should render correctly with type="primary" 1`] = `
<div
  className="bpk-chip bpk-chip--primary"
>
  <span
    className="bpk-chip__label bpk-chip__label--primary"
  >
    This is a Chip!
  </span>
  <BpkCloseButton
    className="bpk-chip__close-button bpk-chip__close-button--primary"
    customIcon={null}
    label="Close"
    onClick={[Function]}
  />
</div>
`;

exports[`BpkChip should render correctly with type="primary" and disabled 1`] = `
<div
  className="bpk-chip bpk-chip--primary bpk-chip--disabled"
>
  <span
    className="bpk-chip__label bpk-chip__label--primary bpk-chip__label--disabled"
  >
    This is a Chip!
  </span>
  <BpkCloseButton
    className="bpk-chip__close-button bpk-chip__close-button--primary bpk-chip__close-button--disabled"
    customIcon={null}
    label="Close"
    onClick={[Function]}
  />
</div>
`;

exports[`BpkChip should render correctly with type="primary" and not dismissible 1`] = `
<div
  className="bpk-chip bpk-chip--primary"
>
  <span
    className="bpk-chip__label bpk-chip__label--primary"
  >
    This is a Chip!
  </span>
</div>
`;

exports[`BpkChip should render correctly with type="success" 1`] = `
<div
  className="bpk-chip bpk-chip--success"
>
  <span
    className="bpk-chip__label bpk-chip__label--success"
  >
    This is a Chip!
  </span>
  <BpkCloseButton
    className="bpk-chip__close-button bpk-chip__close-button--success"
    customIcon={null}
    label="Close"
    onClick={[Function]}
  />
</div>
`;

exports[`BpkChip should render correctly with type="success" and disabled 1`] = `
<div
  className="bpk-chip bpk-chip--success bpk-chip--disabled"
>
  <span
    className="bpk-chip__label bpk-chip__label--success bpk-chip__label--disabled"
  >
    This is a Chip!
  </span>
  <BpkCloseButton
    className="bpk-chip__close-button bpk-chip__close-button--success bpk-chip__close-button--disabled"
    customIcon={null}
    label="Close"
    onClick={[Function]}
  />
</div>
`;

exports[`BpkChip should render correctly with type="success" and not dismissible 1`] = `
<div
  className="bpk-chip bpk-chip--success"
>
  <span
    className="bpk-chip__label bpk-chip__label--success"
  >
    This is a Chip!
  </span>
</div>
`;
